feat: add measurement type to scores data structure (#264)
